[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Main/Main.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Game1/Game1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Game2/Game2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Game3/Game3.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Main/Main.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Fonts/Poppins-Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.847059, 0.909804, 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 6 )

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="Main" type="Sprite" parent="."]
position = Vector2( 510.316, 300.015 )
scale = Vector2( 1.00311, 1 )
texture = ExtResource( 1 )

[node name="Game1" parent="." instance=ExtResource( 2 )]

[node name="Game2" parent="." instance=ExtResource( 3 )]

[node name="Game3" parent="." instance=ExtResource( 4 )]
position = Vector2( 683.994, -10.3635 )

[node name="Continue" type="Button" parent="."]
pause_mode = 2
margin_left = 388.224
margin_top = 260.0
margin_right = 635.224
margin_bottom = 304.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ok, I got it!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 388.224
margin_top = 260.0
margin_right = 635.224
margin_bottom = 304.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Try again!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTime" type="Label" parent="."]
margin_left = 915.0
margin_top = 19.0
margin_right = 1003.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
